removing term scrollbar and adding correct font

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,3 +15,6 @@ img {
   image-rendering: -moz-crisp-edges;
   image-rendering: crisp-edges;
 }
+.xterm-viewport {
+  overflow-y: hidden !important;
+}
